# python

./: .gitignore  Dockerfile_jupyter  docker-compose.yml
.github/workflows/: leap_checker.yml
leap_checker/: .pylintrc  README.md  setup.cfg  tox.ini
leap_checker/leap_checker/: commandline.py  is_leap.py
leap_checker/tests/: test_isleap.py
training/: Abstract classes.ipynb  Context managers.ipynb  Decorators.ipynb  Generators.ipynb
