[metadata]
name = leap_checker
version = 0.1
author = Approximator
author_email = alex@nls.la
description = Leap Year Checker
url = https://github.com/approximator/python/leap_checker
requires-dist = setuptools
platform = any
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Utilities


[options]
python_requires>=3.7
zip_safe = True
packages = find:
install_requires =

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    is_leap=leap_checker.commandline:main
